custom_profile_fields: Fix date field cross icon visibility
- Show cross icon only when a date is selected using 'has-date' CSS class
- Hide cross icon on page load when no date is saved
- Reset cross icon visibility when an invalid date is reverted.

Fixes: #38929

--- a/web/styles/settings.css
+++ b/web/styles/settings.css
@@ -1729,7 +1729,7 @@ label.preferences-radio-choice-label {
             resize: vertical;
         }
 
-        &:hover .remove_date {
+        &.has-date:hover .remove_date {
             display: inline-flex;
         }
 
